--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <p>"Whats the news?"</p>
-</body>
+    <link rel="stylesheet" href="../CSS/index.css" />
+  </head>
+  <body>
+    <div class="header">
+      <!-- Header-->
+      <div class="navigation"><!--Navigation--></div>
+    </div>
+    <div class="section">
+      <!--Section-->
+      <div class="article"><!--article--></div>
+      <div class="article"></div>
+      <div class="article"></div>
+    </div>
+
+    <div class="side-bar"></div>
+   <div class="footer"> </div>
+   
+  </body>
 </html>
