Updated with different headwords

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,19 +8,17 @@
     <link rel="stylesheet" href="../CSS/index.css" />
   </head>
   <body>
-    <div class="header">
+    <header> </header>
       <!-- Header-->
-      <div class="navigation"><!--Navigation--></div>
-    </div>
-    <div class="section">
+      <nav><!--Navigation--></nav>
+    <section> 
       <!--Section-->
-      <div class="article"><!--article--></div>
-      <div class="article"></div>
-      <div class="article"></div>
-    </div>
+      <article> </article>
+      <article> </article>
+      <article> </article>
+    </section>
+    <aside> </aside>
+    <footer> </footer>
 
-    <div class="side-bar"></div>
-   <div class="footer"> </div>
-   
   </body>
 </html>
